[package]
name = "gazelle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4.2"
chrono = "0.4.34"
colored = "2.1.0"
imgui-wgpu = "0.24.0"
tokio = { version="1.36.0", features=["full"] }
wgpu = "0.19.1"
winit = "0.29.10"
imgui = "0.11"